[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/DialogueBox.png" type="Texture" id=1]
[ext_resource path="res://assets/CursorArrow.png" type="Texture" id=2]
[ext_resource path="res://nodes/Reader.gd" type="Script" id=3]

[node name="Reader" type="CanvasLayer"]
script = ExtResource( 3 )
slide_speed = 0.75

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 150, 250 )
scale = Vector2( 0.25, 0.25 )
flip_h = true

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 300, 250 )
scale = Vector2( 0.25, 0.25 )
flip_h = true

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 724, 250 )
scale = Vector2( 0.25, 0.25 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 874, 250 )
scale = Vector2( 0.25, 0.25 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -200.0
margin_right = 500.0
margin_bottom = -20.0
texture = ExtResource( 1 )
patch_margin_left = 23
patch_margin_top = 23
patch_margin_right = 23
patch_margin_bottom = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 30.0
margin_top = 30.0
margin_right = 970.0
margin_bottom = 150.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CursorArrow1" type="Sprite" parent="NinePatchRect"]
visible = false
position = Vector2( 100, 127 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Choice1" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 120.639
margin_top = 108.022
margin_right = 371.639
margin_bottom = 148.022
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CursorArrow2" type="Sprite" parent="NinePatchRect"]
visible = false
position = Vector2( 600, 127 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Choice2" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 617.851
margin_top = 106.762
margin_right = 868.851
margin_bottom = 146.762
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LeftOffscreen" type="Position2D" parent="."]
position = Vector2( -200, 250 )

[node name="RightOffscreen" type="Position2D" parent="."]
position = Vector2( 1224, 250 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
